fixes footer to have columns on smaller screens

--- a/css/style.css
+++ b/css/style.css
@@ -1155,8 +1155,8 @@ a:active {
     padding-right: 5rem;
   }
 
-  .sm\:pb-20{
-    padding-bottom: 5rem;
+  .sm\:pb-10{
+    padding-bottom: 2.5rem;
   }
 
   .sm\:text-2xl{
